[gd_scene load_steps=3 format=3 uid="uid://b7fw7bodu5fbb"]

[ext_resource type="Script" uid="uid://civujbqn2um1u" path="res://src/ui_widgets/setting_shortcut.gd" id="1_4c8oc"]
[ext_resource type="Texture2D" uid="uid://cvh3kwbucf2n1" path="res://assets/icons/Reload.svg" id="2_n8e0s"]

[node name="SettingShortcut" type="PanelContainer"]
offset_right = 172.0
offset_bottom = 62.0
mouse_filter = 1
theme_type_variation = &"SpaciousPanel"
script = ExtResource("1_4c8oc")

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 6

[node name="Label" type="Label" parent="MainContainer"]
layout_mode = 2
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ShortcutContainer" type="HBoxContainer" parent="MainContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="MainContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = &"FlatButton"
icon = ExtResource("2_n8e0s")
